@@ -44,37 +44,39 @@ void TargetedMovementGeneratorMedium<T,D>::_setTargetLocation(T* owner, bool upd
     {
         if (!i_offset)
         {
+            float dist_min; // Min Contact Dist
+            dist_min = i_target->GetCombatReach() - (i_target->GetObjectSize() + 2.5f); // Get min Dist
+
+            if (dist_min == 0)
+               dist_min = 0.2f;
             // to nearest contact position
-            i_target->GetContactPoint(owner, x, y, z);
+            i_target->GetContactPoint(owner, x, y, z, dist_min);
         }
         else
         {
             float dist;
-            float size;
 
             // Pets need special handling.
             // We need to subtract GetObjectSize() because it gets added back further down the chain
-            //  and that makes pets too far away. Subtracting it allows pets to properly
-            //  be (GetCombatReach() + i_offset) away.
+            // and that makes pets too far away. Subtracting it allows pets to properly
+            // be (GetCombatReach() + i_offset) away.
             // Only applies when i_target is pet's owner otherwise pets and mobs end up
-            //   doing a "dance" while fighting
+            // doing a "dance" while fighting
             if (owner->isPet() && i_target->GetTypeId() == TYPEID_PLAYER)
-            {
-                dist = i_target->GetCombatReach();
-                size = i_target->GetCombatReach() - i_target->GetObjectSize();
-            }
+                dist = i_target->GetCombatReach() - (i_target->GetObjectSize() + 2.5f);
             else
-            {
-                dist = i_offset + 1.0f;
-                size = owner->GetObjectSize();
-            }
+                dist = owner->GetCombatReach() + i_offset + 1.5f;
+
+            if (dist == 0)
+                dist = 0.2f;
 
             if (i_target->IsWithinDistInMap(owner, dist))
-                return;
+                i_target->GetContactPoint(owner, x, y, z, dist);
 
             // to at i_offset distance from target and i_angle from target facing
-            i_target->GetClosePoint(x, y, z, size, i_offset, i_angle);
+            i_target->GetClosePoint(x, y, z, dist, i_offset, i_angle);
         }
+
     }
     else
     {
